HOTFIX: Fixed flickering on candidate page when coming from Interviewing page

--- a/src/app/pages/system/interview/containers/interviewing/interviewing.component.scss
+++ b/src/app/pages/system/interview/containers/interviewing/interviewing.component.scss
@@ -1,6 +1,7 @@
 a {
   color: #2a5885;
   text-decoration: none;
+  cursor: pointer;
 }
 
 a:hover {
